--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,24 @@
     transform: rotate(360deg);
   }
 }
+
+h1 {
+  text-align: center;
+}
+
+p{
+  text-align: center;
+}
+
+.input{
+  margin-left: 47%;
+}
+ li img{
+   height:500px;
+   width: 500px;
+
+ }
+
+ ul {
+   list-style-type: none;
+ }
