--- a/src/App.css
+++ b/src/App.css
@@ -49,11 +49,18 @@ p{
   margin-left: 47%;
 }
  li img{
-   height:500px;
-   width: 500px;
+   height:400px;
+   width: 400px;
+   border: 5px solid #555;
 
  }
 
  ul {
    list-style-type: none;
+ }
+
+ ul li {
+   display: inline;
+   margin-left: 25px;
+   margin-top: 20px;
  }
